@@ -26,14 +26,14 @@ For example, if a compound index for attributes A and B has been created,
 T WHERE A=1 AND B=2 will use the index, but T WHERE A=1 will not,
 neither will T WHERE A=1 AND B>2.
 
+<p>For each candidate key, an index is created automatically .
+
 <h2>Expressions</h2>
 
 <p>Duro 0.8 expressions may not contain relation-valued expressions
 which contain variables referring to variables in the enclosing expression.
 In other words, a relation-valued RDB_expression may only represent a table,
 but not a general relation-valued expression.
-
-<p>For key attributes, an index is created automatically.
 
 <p>$Id$
 
