@@ -4,6 +4,9 @@ Summary of Changes for Duro
 
 Changes for Duro 0.9
 
+- Added conversion operators (RDB_to_int() etc.), added conversion operators
+  to expression parser.
+
 - Durotcl now supports creating tables with user-defined types.
 
 - Small change to RDB_expression struct.
